메뉴 액티비티 뷰페이저, 탭레이아웃(bold 변화 제외)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,11 @@
         android:theme="@style/Theme.ZARAROID">
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="android.intent.action.MENU" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".MenuActivity">
         </activity>
     </application>
 
