--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,12 @@
         android:theme="@style/Theme.ZARAROID">
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MENU" />
+                <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".MenuActivity">
+
         </activity>
     </application>
 
